# BetterWay

./: ChineseReadMe.md  EnglishReadMe.md  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/androidTest/java/com/android/betterway/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: province.json
app/src/main/cpp/: com_android_betterway_utils_NativeHelper.h  native-lib.cpp  stackblur.c  stackblur.h
app/src/main/java/com/android/betterway/: MainActivity.java  MyApplication.java  MyReceiver.java
app/src/main/java/com/android/betterway/data/: LocationBean.java  LocationItemBean.java  LocationPlan.java  MyDate.java  MyTime.java  NewPlan.java  Plan.java  RoutePlan.java  Schedule.java  newPlan.java
app/src/main/java/com/android/betterway/itempickeractivity/: ItemPickerActivity.java
app/src/main/res/anim/: activity_finish.xml  activity_in.xml  dialog_push_in.xml  dialog_push_out.xml
app/src/main/res/drawable/: button_press_drawble.xml
app/src/main/res/layout/: activity_auto_schedule.xml  activity_item_picker.xml  activity_main.xml  activity_normal_schedule.xml  activity_setting.xml  activity_show_schedule.xml  chose_approach_to_go.xml  clockpicker_dialog.xml  datepicker.xml  fragment_auto_schedule_assist.xml  fragment_auto_schedule_main.xml  fragment_schedule_detail.xml  fragment_schedule_map.xml  item_location_show.xml  item_route_show.xml  location_dialog_fragment.xml  location_item.xml  location_pick_item.xml  location_recycler_bottom_item.xml  schedule_item.xml  test.xml  timepicker_dialog.xml  toolbar.xml
app/src/main/res/menu/: add_auto_menu.xml  main_menu.xml  show_schedule_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-v19/: styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/android/betterway/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+74 files in other folders)
